// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbcDutyScheduleEdit__Person Should render schedule edit people list item 1`] = `
<div
  className="abc-duty-schedule-edit__person"
  data-lego="react"
  style={Object {}}
>
  <abc-employee
    caption="robot-serptools@yandex-team.ru"
    counter={42}
    login="robot-serptools"
    name="WALL-E"
    size="m"
  />
</div>
`;

exports[`AbcDutyScheduleEdit__Person Should render schedule edit people list item with no person 1`] = `
<div
  className="abc-duty-schedule-edit__person"
  data-lego="react"
  style={Object {}}
>
  <abc-employee
    caption={null}
    counter={42}
    login=""
    name="no person on duty"
    size="m"
  />
</div>
`;

exports[`AbcDutyScheduleEdit__Person Should render selected schedule edit people list item 1`] = `
<div
  className="abc-duty-schedule-edit__person"
  data-lego="react"
  style={Object {}}
>
  <abc-employee
    caption="robot-serptools@yandex-team.ru"
    counter={42}
    login="robot-serptools"
    name="WALL-E"
    size="m"
  />
</div>
`;
